--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
   
   .grid{
     background-color: lightgray;
-    border: 1px solid red;
+    border: 1px solid black;
     height: 500px;
     width: 500px;
     display: grid;
