--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
   height: 550px;
   width: 550px;
   display: grid;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
 .grid:hover{
@@ -36,6 +36,7 @@ button{
   background-color: white;
   border: 1px solid transparent;
   border-radius: 3px;
+  margin-left: 40px;
 }
 
 button:hover{
