--- a/style.css
+++ b/style.css
@@ -18,16 +18,11 @@ body{
   height: 550px;
   width: 550px;
   display: grid;
-  margin-top: 60px;
+  margin-top: 40px;
 }
 
 .grid:hover{
   border-color: white;
-}
-
-.buttons{
-  margin-top: 40px;
-  text-align: center;
 }
 
 button{
@@ -51,4 +46,13 @@ button:focus{
 button:active{
   background-image: linear-gradient(#2b7688, #004758);
 }
-  
+
+.sketch-functions{
+  margin-top: 20px;
+  text-align: center;
+}
+
+.sketch-modes{
+  margin-top: 5px;
+  text-align: center;
+}
