--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@ html{
 body{
   margin: auto;
   max-width: 500px; 
-  text-align: center;
+  /* text-align: center; */
 }
   
-/* #title{
-  text-align-last: center;
-} */
+#title{
+  display: flex;
+  justify-content: center;
+}
   
 .grid{
   border: 5px solid #2b7688;
