--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ button{
   background-color: white;
   border: 1px solid transparent;
   border-radius: 3px;
-  margin-left: 40px;
+  /* margin-left: 40px; */
 }
 
 button:hover{
@@ -51,21 +51,51 @@ button:active{
   margin-left: 7px;
 }
 
-#colourful{
+/* #colourful{
   margin-left: 7px;
-}
+} */
 
 .sketch-functions{
   margin-top: 20px;
   text-align: center;
 }
 
-.sketch-modes{
-  margin-top: 5px;
-  text-align: center;
+/* CHANGE THIS TO SATIFY WHAT IT SHOULD LOOK LIKE ------------------------------------------------ */
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
 }
 
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+/* Links inside the dropdown */
+.dropdown-content button {
+  padding: 12px 16px;
+  display: block;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* ------------------------------------------------------------------------------------------------ */
+
+/* .sketch-modes{
+  margin-top: 5px;
+  text-align: center;
+} */
+
+/* ------------------------------------------------------------------------------------------------ */
 /*Class to be added to a mode button whenever it is active*/
 .mode-active{
   background-image: linear-gradient(#2b7688, #004758);
 }
+
+/* ------------------------------------------------------------------------------------------------ */
